flex/flex-tests/testData/js2_highlighting/FunctionSignatureMismatch4.js2
package {
    public class <error>Base</error> {
        internal function foo(i:int) {}
    }
}
<error descr="Package should be first statement in file">package</error> {
    public class FunctionSignatureMismatch4 extends Base {
        internal override function foo(i: int) {}

        function bar() {
            foo(<error><caret>"abc"</error>);
        }

        function zzz() {
            foo<error>()</error>;
            foo(1);
        }
    }
}